# lincity-ng-android

./: README_ANDROID.md
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/libxml2/: configure
app/jni/libxmlpp/: ChangeLog
app/jni/libxmlpp/untracked/docs/reference/: libxml++-5.0.devhelp2  libxml++-5.0.tag
app/jni/libxmlpp/untracked/docs/reference/html/: annotated.html  classes.html  classhash__load__check__resize__trigger__size__base.html  classhash__load__check__resize__trigger__size__base__inherit__graph.map  classhash__load__check__resize__trigger__size__base__inherit__graph.md5  classlu__counter__policy__base.html  classlu__counter__policy__base__inherit__graph.map  classlu__counter__policy__base__inherit__graph.md5  classmask__based__range__hashing.html  classmask__based__range__hashing__inherit__graph.map  classmask__based__range__hashing__inherit__graph.md5  classmod__based__range__hashing.html  classmod__based__range__hashing__inherit__graph.map  classmod__based__range__hashing__inherit__graph.md5  classxmlpp_1_1Attribute-members.html  classxmlpp_1_1Attribute.html  classxmlpp_1_1AttributeDeclaration-members.html  classxmlpp_1_1AttributeDeclaration.html  classxmlpp_1_1AttributeDeclaration__inherit__graph.map  classxmlpp_1_1AttributeNode-members.html  classxmlpp_1_1AttributeNode.html  classxmlpp_1_1AttributeNode__inherit__graph.map  classxmlpp_1_1Attribute__inherit__graph.map  classxmlpp_1_1CdataNode-members.html  classxmlpp_1_1CdataNode.html  classxmlpp_1_1CdataNode__inherit__graph.map  classxmlpp_1_1CommentNode-members.html  classxmlpp_1_1CommentNode.html  classxmlpp_1_1CommentNode__inherit__graph.map  classxmlpp_1_1ContentNode-members.html  classxmlpp_1_1ContentNode.html  classxmlpp_1_1ContentNode__inherit__graph.map  classxmlpp_1_1Document-members.html  classxmlpp_1_1Document.html  classxmlpp_1_1Document__inherit__graph.map  classxmlpp_1_1DomParser-members.html  classxmlpp_1_1DomParser.html  classxmlpp_1_1DomParser__inherit__graph.map  classxmlpp_1_1Dtd-members.html  classxmlpp_1_1Dtd.html  (+167 more)
app/jni/src/: CMakeLists.txt  config.h
app/src/main/: AndroidManifest.xml
app/src/main/java/org/libsdl/app/: LincityActivity.java
